added polish translations and fixed a bug where the creative inventory item group name displays as "bodyhealthsystem.group.general"

--- a/src/main/resources/assets/bodyhealthsystem/lang/en_us.json
+++ b/src/main/resources/assets/bodyhealthsystem/lang/en_us.json
@@ -3,7 +3,7 @@
   "item.bodyhealthsystem.morphine": "Morphine",
   "item.bodyhealthsystem.medkit": "Medkit",
 
-  "itemGroup.bodyhealthsystem.general": "Body Health System",
+  "bodyhealthsystem.group.general": "Body Health System",
 
   "effect.bodyhealthsystem.morphine_effect": "Morphine",
 
